--- a/src/web/app/components/adding-question-panel/adding-question-panel.component.scss
+++ b/src/web/app/components/adding-question-panel/adding-question-panel.component.scss
@@ -1,16 +1,15 @@
 .background-color-light-blue {
-  background-color: #eaeff5;
+  background-color: #eaeff5; 
 }
 
-.responsive-padding {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-@media (width <= 576px) {
-  // prevent overflow for small screen sizes
-  .btn-small-padding {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+.dropdown-item {
+  transition: background-color 0.2s ease-in-out;
+  
+  &:hover {
+    background-color: #e9ecef; 
   }
+}
+
+.btn-link .fas {
+  vertical-align: middle;
 }
