--- a/src/web/app/components/account-requests-table/account-request-table.component.scss
+++ b/src/web/app/components/account-requests-table/account-request-table.component.scss
@@ -1,65 +1,83 @@
-::ng-deep .highlighted-text {
+.highlighted-text {
   background-color: yellow;
 }
 
-/* stylelint-disable declaration-block-no-redundant-longhand-properties */
 .table-responsive {
   overflow-y: visible;
-  overflow-x: -moz-scrollbars-horizontal; 
+  overflow-x: auto;
+
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 3px;
+  }
 }
 
 .table-responsive > table > thead > tr > th {
   white-space: nowrap;
 }
 
-/* stylelint-disable property-no-vendor-prefix */
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 1px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 0;
-  background-color: rgb(0 0 0 / 50%);
-  box-shadow: 0 0 1px rgb(255 255 255 / 50%);
-}
-
-
 #search-table-account-request {
   border-collapse: collapse;
-}
 
+  thead {
+    th {
+      vertical-align: middle;
+      font-weight: 600;
+    }
+  }
 
-#search-table-account-request th:last-child, 
-#search-table-account-request td:last-child {
-  min-width: 10vw;
-  position: sticky;
-  right: 0;
-  z-index: 1;
-  background-color: #F8F9FA;
-}
+  tbody {
+    tr {
+      transition: background-color 0.2s ease;
+      
+      &:hover {
+        background-color: #f1f3f5; 
+      }
+    }
 
-#search-table-account-request th:last-child::after,
-#search-table-account-request td:last-child::after {
-  content: "";
-  position: absolute;
-  left: -1px;
-  top: 0;
-  bottom: 0;
-  width: 1px;
-  background: #c8c7c7;
-  z-index: 1;
-}
+    td {
+      vertical-align: middle;
+    }
+  }
 
-#comment-box {
-  min-height: 5vh;
-  width: max(800px, 35vw);
-  max-width: max-content;
-  word-break: break-word;
-  word-wrap: break-all;
-
+ 
+  th:last-child,
+  td:last-child {
+    position: sticky;
+    right: 0;
+    z-index: 1;
+    background-color: #f8f9fa; 
+    min-width: 10vw;
+    
+    &::after {
+      content: "";
+      position: absolute;
+      left: -1px;
+      top: 0;
+      bottom: 0;
+      width: 1px;
+      background: #c8c7c7;
+      z-index: 1;
+    }
+  }
 }
 
 .dropdown-item {
   border: none;
+  &:hover {
+    background-color: #e9ecef; 
+  }
+}
+
+.comment-cell {
+  min-height: 5vh;
+  width: max(800px, 35vw);
+  max-width: max-content;
+  word-break: break-word;
+  white-space: pre-wrap; 
 }
