--- a/src/web/app/components/adding-question-panel/adding-question-panel.component.html
+++ b/src/web/app/components/adding-question-panel/adding-question-panel.component.html
@@ -1,30 +1,73 @@
-<div class="card-body background-color-light-blue text-center responsive-padding">
-  <div ngbDropdown class="d-inline-block">
-    <button id="btn-new-question" class="btn btn-primary btn-small-padding" ngbDropdownToggle>Add New Question</button>
-    <div id="new-question-dropdown" ngbDropdownMenu>
-      <button class="dropdown-item" (click)="templateQuestionModalHandler()">Choose from template questions</button>
+<div class="card-body background-color-light-blue text-center p-2 p-sm-3">
+  <div ngbDropdown class="d-inline-block me-2">
+    <button 
+      id="btn-new-question" 
+      class="btn btn-primary btn-sm" 
+      ngbDropdownToggle
+    >
+      Add New Question
+    </button>
+    <div id="new-question-dropdown" ngbDropdownMenu class="py-2">
+      <button class="dropdown-item" (click)="templateQuestionModalHandler()">
+        Choose from template questions
+      </button>
       <div class="dropdown-divider"></div>
+
       <ng-container *ngFor="let questionType of FeedbackQuestionType | enumToArray">
-        <div *ngIf="questionType !== FeedbackQuestionType.CONSTSUM">
-          <div class="d-flex btn-group justify-content-between" role="group">
-            <button class="dropdown-item" (click)="populateAndShowNewQuestionFormHandler(questionType)">
+        <ng-container *ngIf="questionType !== FeedbackQuestionType.CONSTSUM">
+          <div class="d-flex align-items-center justify-content-between px-2">
+            <button 
+              class="dropdown-item flex-grow-1 text-start" 
+              (click)="populateAndShowNewQuestionFormHandler(questionType)"
+            >
               {{ questionType | questionTypeName }}
             </button>
-            <a type="button" class="btn btn-link" *ngIf="!isLinkDisabled" target="_blank" rel="noopener noreferrer"
-              tmRouterLink="/web/instructor/help" aria-label="More info"
-              [queryParams]="{questionId: questionType | questionTypeHelpPath, section: 'questions'}">
+            <a 
+              type="button"
+              class="btn btn-link p-0 ms-2 text-decoration-none"
+              *ngIf="!isLinkDisabled" 
+              target="_blank" 
+              rel="noopener noreferrer"
+              tmRouterLink="/web/instructor/help" 
+              aria-label="More info"
+              [queryParams]="{ questionId: questionType | questionTypeHelpPath, section: 'questions' }"
+            >
               <i class="fas fa-info-circle"></i>
             </a>
           </div>
-        </div>
+        </ng-container>
       </ng-container>
     </div>
   </div>
-  <a type="button" class="btn btn-link px-1 px-sm-3" *ngIf="!isLinkDisabled" target="_blank" rel="noopener noreferrer"
-    tmRouterLink="/web/instructor/help" [queryParams]="{questionId: 'questions', section: 'questions'}" aria-label="Help for questions">
+
+  <a 
+    type="button" 
+    class="btn btn-link text-decoration-none px-1 px-sm-3 me-2" 
+    *ngIf="!isLinkDisabled" 
+    target="_blank" 
+    rel="noopener noreferrer"
+    tmRouterLink="/web/instructor/help" 
+    [queryParams]="{ questionId: 'questions', section: 'questions' }" 
+    aria-label="Help for questions"
+  >
     <i class="fas fa-info-circle"></i>
   </a>
-  <a type="button" class="btn btn-link px-1 px-sm-3" *ngIf="isLinkDisabled"><i class="fas fa-info-circle"></i></a>
-  <button id="btn-copy-question" class="btn btn-primary btn-small-padding" (click)="copyQuestionsFromOtherSessionsHandler()"
-    [disabled]="isCopyingQuestion"><tm-ajax-loading *ngIf="isCopyingQuestion"></tm-ajax-loading>Copy Question</button>
+
+  <a 
+    type="button" 
+    class="btn btn-link text-decoration-none px-1 px-sm-3 me-2" 
+    *ngIf="isLinkDisabled"
+  >
+    <i class="fas fa-info-circle"></i>
+  </a>
+
+  <button 
+    id="btn-copy-question" 
+    class="btn btn-primary btn-sm" 
+    (click)="copyQuestionsFromOtherSessionsHandler()" 
+    [disabled]="isCopyingQuestion"
+  >
+    <tm-ajax-loading *ngIf="isCopyingQuestion"></tm-ajax-loading>
+    Copy Question
+  </button>
 </div>
