--- a/src/web/app/components/comment-box/comment-edit-form/comment-edit-form.component.html
+++ b/src/web/app/components/comment-box/comment-edit-form/comment-edit-form.component.html
@@ -1,53 +1,87 @@
-<div class="row">
+<div class="row g-3" *ngIf="isFeedbackParticipantComment || response">
   <div class="col-6" *ngIf="isFeedbackParticipantComment">
-    Your comment about the above response
+    <p class="mb-0">Your comment about the above response</p>
   </div>
   <div class="col-6" *ngIf="!isFeedbackParticipantComment && response">
-    Giver: {{ response.giver }} ({{ response.giverTeam }})<br/>
-    Recipient: {{ response.recipient }} ({{ response.recipientTeam }})
+    <p class="mb-0">
+      <strong>Giver:</strong> {{ response.giver }} ({{ response.giverTeam }})<br>
+      <strong>Recipient:</strong> {{ response.recipient }} ({{ response.recipientTeam }})
+    </p>
   </div>
-  <div class="col-6">
-    <div class="float-end">
-      <span>
-        <button *ngIf="isVisibilityOptionEnabled" class="btn btn-info btn-sm" (click)="toggleVisibilityTable()">
-          <i class="fas fa-eye"></i> {{ isVisibilityTableExpanded ? "Hide" : "Show" }} Visibility Options</button>
-      </span>
-      <span *ngIf="!isVisibilityOptionEnabled" style="margin-left: 10px;">
-        <button *ngIf="!shouldHideClosingButton" type="button" class="btn-close" aria-label="Close" (click)="triggerCloseCommentBoxEvent()"></button>
-      </span>
+
+  <div class="col-6" *ngIf="!isFeedbackParticipantComment || response">
+    <div class="d-flex justify-content-end">
+      <div *ngIf="isVisibilityOptionEnabled">
+        <button 
+          class="btn btn-info btn-sm" 
+          (click)="toggleVisibilityTable()">
+          <i class="fas fa-eye"></i>
+          {{ isVisibilityTableExpanded ? "Hide" : "Show" }} Visibility Options
+        </button>
+      </div>
+      
+      <div *ngIf="!isVisibilityOptionEnabled" class="ms-2">
+        <button 
+          *ngIf="!shouldHideClosingButton" 
+          type="button" 
+          class="btn-close" 
+          aria-label="Close" 
+          (click)="triggerCloseCommentBoxEvent()">
+        </button>
+      </div>
     </div>
   </div>
 </div>
-<p *ngIf="isVisibilityOptionEnabled">You may change comment's visibility using the visibility options on the right hand side.</p>
 
-<div *ngIf="isVisibilityTableExpanded" @collapseAnim>
-  <table class="table margin-bottom-0 background-color-white table-striped table-responsive-md">
-    <thead>
-    <tr>
-      <th scope="col" class="text-start">User/Group</th>
-      <th scope="col" class="text-center" *ngFor="let commentVisibilityControl of CommentVisibilityControl | enumToArray">{{ commentVisibilityControl | commentVisibilityControlName }}</th>
-    </tr>
-    </thead>
-    <tbody>
-    <ng-container *ngFor="let commentVisibilityType of CommentVisibilityType | enumToArray">
-      <tr *ngIf="visibilityStateMachine.isVisibilityTypeApplicable(commentVisibilityType)">
-        <td><span container="body" class="ngb-tooltip-class" [ngbTooltip]="commentVisibilityType | commentVisibilityTypeDescription">{{ commentVisibilityType | commentVisibilityTypeName }}</span></td>
-        <td *ngFor="let commentVisibilityControl of CommentVisibilityControl | enumToArray" class="text-center">
-          <input type="checkbox" [checked]="visibilityStateMachine.isVisible(commentVisibilityType, commentVisibilityControl)"
-                 (click)="modifyVisibilityControl($event.target.checked, commentVisibilityType, commentVisibilityControl)">
-        </td>
-      </tr>
-    </ng-container>
-    </tbody>
-  </table>
+<p class="my-2" *ngIf="isVisibilityOptionEnabled">
+  You may change the comment's visibility using the options on the right hand side.
+</p>
+
+<div *ngIf="isVisibilityTableExpanded" @collapseAnim class="mt-3">
+  <div class="table-responsive">
+    <table class="table table-striped table-hover align-middle">
+      <thead class="table-light">
+        <tr>
+          <th scope="col" class="text-start">User/Group</th>
+          <th scope="col" class="text-center" *ngFor="let commentVisibilityControl of CommentVisibilityControl | enumToArray">
+            {{ commentVisibilityControl | commentVisibilityControlName }}
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <ng-container *ngFor="let commentVisibilityType of CommentVisibilityType | enumToArray">
+          <tr *ngIf="visibilityStateMachine.isVisibilityTypeApplicable(commentVisibilityType)">
+            <td>
+              <span class="ngb-tooltip-class" container="body"
+                    [ngbTooltip]="commentVisibilityType | commentVisibilityTypeDescription">
+                {{ commentVisibilityType | commentVisibilityTypeName }}
+              </span>
+            </td>
+            <td 
+              *ngFor="let commentVisibilityControl of CommentVisibilityControl | enumToArray"
+              class="text-center">
+              <input 
+                type="checkbox" 
+                [checked]="visibilityStateMachine.isVisible(commentVisibilityType, commentVisibilityControl)"
+                (click)="modifyVisibilityControl($event.target.checked, commentVisibilityType, commentVisibilityControl)">
+            </td>
+          </tr>
+        </ng-container>
+      </tbody>
+    </table>
+  </div>
 </div>
 
-<div style="margin: 10px 0;">
-  <tm-rich-text-editor [richText]="model.commentText" (richTextChange)="triggerModelChange('commentText', $event)"
-                       placeholderText="Enter your comment here" [isDisabled]="isDisabled"></tm-rich-text-editor>
+<div class="my-3">
+  <tm-rich-text-editor
+    [richText]="model.commentText"
+    (richTextChange)="triggerModelChange('commentText', $event)"
+    placeholderText="Enter your comment here"
+    [isDisabled]="isDisabled">
+  </tm-rich-text-editor>
 </div>
 
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-end mt-3">
   <button
     type="button"
     class="btn btn-light btn-sm me-2"
